# priv

./: README.md
Sandspiel_go/: README.md  main.go
aoc2015/day3/: Makefile  day3.exs
asm/count_down_to_ten/: main  main.asm
asm/echo/: main  main.asm
asm/echo_error/: main  main.asm
asm/even_odd/: Makefile  main  main.asm
asm/hello_world/: main  main.asm
asm/reverse_string/: main.asm
automata/: elem.ex
c++/dsa/Array/: Arrays.cpp  CMakeLists.txt
c++/dsa/Array/.cache/clangd/index/: Arrays.cpp.369F2A76AFD38D4A.idx
c/arena/: 3  Makefile  main  main.c
c/huffman/: main  main.c
c/ping/: Makefile  main  main.c
codecrafters-shell-rust/: README.md
codecrafters-shell-rust/src/: main.rs
csharp/: ConsoleApp1.sln
database/: Makefile  main  main.c
dragoncurve/src/: main.cpp
go/Sandspiel_go/: Makefile  go.mod
go/markdownGenerator/: Makefile  main  main.go  test.html  test.md
homepage/: package-lock.json  package.json  tailwind.config.ts
httpClient/: simpleHttp.py
leetcode/: 20.valid-parentheses.rs  20.valid-parentheses.ts  2873.maximum-value-of-an-ordered-triplet-i.rs  2873.maximum-value-of-an-ordered-triplet-i.ts  70.climbing-stairs.ts
node_typescript/touring-machine/: index.html
node_typescript/workers/: README.md  bun.lockb  digest.txt  package.json
osdev/: makeKernel.sh  os.iso  run.sh
osdev/tests/: run.sh  test.s
rita/: main.py  main.ts
rust/codecrafters-http-server-rust/: README.md
rust/game_of_life/: 2  (+1 more)
screener/: CMakeLists.txt  Makefile
screener/src/: main.cpp
some_game/: compile_commands.json
tmp/: run.ps1
wavefunctioncollapse/: index.html  index.js  sketch.js
(+85 files in other folders)
